# napalm_netonix

./: README.md  pyproject.toml
napalm_netonix/: netonix.py
src/: __init__.py  netonix.py
